force-app/main/default/objects/ContentVersion/fields/Expiry_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_From_Date__c</fullName>
    <label>​​Expiry​ ​From​ ​Date​​</label>
    <type>Date</type>
</CustomField>