force-app/main/default/objects/ContentVersion/fields/Expiry_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_To_Date__c</fullName>
    <label>Expiry​ ​To​ ​Date</label>
    <type>Date</type>
</CustomField>