force-app/main/default/objects/ContentVersion/fields/Unique_Title__c.field-meta.xml
<CustomField>
    <fullName>Unique_Title__c</fullName>
    <displayFormat>Image-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Unique Title</label>
    <type>AutoNumber</type>
</CustomField>