force-app/main/default/objects/ContentVersion/recordTypes/Default_GlobalImage.recordType-meta.xml
<RecordType>
    <fullName>Default_GlobalImage</fullName>
    <active>true</active>
    <label>Default /GlobalImage</label>
</RecordType>